product-sku is added

--- a/src/app/modules/admin/components/product-view/product-view.component.html
+++ b/src/app/modules/admin/components/product-view/product-view.component.html
@@ -4,6 +4,11 @@
         <a routerLink="../" style="color: black;"><fa-icon [icon]="faArrowLeft" size="2x" class="fa-regular"></fa-icon></a>
       <fa-icon [icon]="faSave" size="2x" class="fal" style="margin-left: 20px;"></fa-icon>
       </div>
+
+      <div>
+        <button  type="button" class="btn btn-dark" style="margin-left: 1300px; " (click)="onSelect()" >Add New Product Sku</button>
+
+      </div>
         <div class="row">
           <div class="col-sm-4 p-3" style="background-color:rgb(218, 136, 35);">
             <div class="form-group">
