--- a/src/app/product-sku/product-sku.component.scss
+++ b/src/app/product-sku/product-sku.component.scss
@@ -1,23 +1,77 @@
 
   
-.scroll-bar
-{
+// .scroll-bar
+// {
    
-    text-shadow: alpha($color: #000000);
-    height: 70%;
-    width: 900px;
-    border: 1px solid grey;
-    font-family: 'GestRegular', Arial, Helvetica, sans-serif;
-    overflow: auto;
+//     text-shadow: alpha($color: #000000);
+//     height: 70%;
+//     width: 900px;
+//     border: 1px solid grey;
+//     font-family: 'GestRegular', Arial, Helvetica, sans-serif;
+//     overflow: auto;
+// }
+
+// .center {
+//     margin: auto;
+//     width: 50%;
+//     padding: 10px;
+//   }
+
+//   .strong {
+//     font-size: large;
+//     font-weight: bold;
+//   }
+  .box{
+    margin-top: 50px;
+    margin-left: 350px;
 }
-
-.center {
-    margin: auto;
-    width: 50%;
-    padding: 10px;
+  .col-2{
+    padding: 20px;
+  }
+  .textarea{
+    width:250px;
+    height: 10px;
+    margin-top: 20px;
+  }
+  
+  .button{
+    margin-left: 170px;
+    margin-top: 50px;
+  
+  }
+  .invalid{
+    color: red;
+  }
+  #toggle{
+   margin-left: 250px;
+   margin-top: -50px;
   }
 
-  .strong {
-    font-size: large;
-    font-weight: bold;
+  input[disabled] {
+ 
+    cursor: not-allowed;
   }
+  .select{
+    font-size: medium;
+    margin-left: -50px;
+    margin-top: -10px;
+  }
+  
+   @media only screen and (max-width: 800px) {
+   
+    [class*="col-2"] {
+      width: 60%;
+      padding: 0px;
+    }
+    .button{
+      margin-left: -200px;
+      margin-top: -40px;
+    
+    }
+    .textarea{
+      width:100px;
+      height: 0px;
+      margin-top: 5px;
+    }
+
+}
