--- a/src/app/product-sku-detail/product-sku-detail.component.scss
+++ b/src/app/product-sku-detail/product-sku-detail.component.scss
@@ -1,36 +1,42 @@
 .box{
     margin-top: 0px;
-    margin-left: 350px;
+    margin-left: 300px;
 }
   .col-2{
-    padding: 20px;
+    padding: 5px;
   }
+  // .textarea{
+  //   width:250px;
+  //   height: 10px;
+  //   margin-top: 20px;
+  // }
   .textarea{
-    width:250px;
-    height: 10px;
-    margin-top: 20px;
+    width: 300px;
   }
-  
   .button{
-    margin-left: 170px;
-    margin-top: 50px;
+    margin-left: 350px;
+    margin-top: 30px;
   
   }
   .invalid{
     color: red;
   }
   #toggle{
-   margin-left: 250px;
+   margin-left:250px;
    margin-top: -50px;
   }
   .select{
     font-size: medium;
-    margin-left: -50px;
-    margin-top: -10px;
+    margin-left: -20px;
+    margin-top: 0px;
   }
   input[disabled] {
  
     cursor: not-allowed;
+  }
+  .Skuimgs{
+    margin-left: 300px;
+    margin-top: 10px;
   }
   
   @media only screen and (max-width: 800px) {
