--- a/src/app/product-sku-detail/product-sku-detail.component.html
+++ b/src/app/product-sku-detail/product-sku-detail.component.html
@@ -49,7 +49,7 @@
 
     <div class="row">
         <div class="col-2">
-            <label class="form-label">Discount%:</label>
+            <label class="form-label">Discount in %:</label>
 
             <input type="text" class="form-control" id="discount" name="discount" [(ngModel)]="productSku.discount"
                 formControlName="Discount">
