--- a/src/app/product-sku-detail/product-sku-detail.component.html
+++ b/src/app/product-sku-detail/product-sku-detail.component.html
@@ -56,7 +56,7 @@
 
         </div>
         <div class="col-2">
-            <label class="form-label">barcode:</label>
+            <label class="form-label">Barcode:</label>
             <input type="text" class="form-control" id="barCode" name="barCode" [(ngModel)]="productSku.barCode"
                 formControlName="barcode">
 
