delete image by imageId,and designed options component.

--- a/src/app/modules/admin/components/product-view/product-view.component.html
+++ b/src/app/modules/admin/components/product-view/product-view.component.html
@@ -61,7 +61,7 @@
                   </div> -->
                  
 
-                     <span style="margin-left: 10px; font-size: medium; margin-top: auto;">{{sku.status === 'true' ? 'Available' : 'Not-Available'}}</span> 
+                     <span style="margin-left: 10px; font-size: medium; margin-top: auto;">{{sku.status}}</span> 
                 </td>
     
 
