--- a/src/app/product-sku-options/product-sku-options.component.html
+++ b/src/app/product-sku-options/product-sku-options.component.html
@@ -1,1 +1,24 @@
-<p>product-sku-options works!</p>
+<!-- <form class="options" [formGroup]="OptionsForm">
+    <h2 class="variant">Variant Details:</h2>
+    <div class="add_btn">
+        <button type="button" class="btn btn-primary" (click)="addOptions()">Add Options</button>
+    </div>
+    <div class="row">
+        <label> Select Option Name:</label>
+        <select class="col-4" id="OptionsDropdown" [(ngModel)]="selectedOptionName" (change)="onselected($event)"
+            formControlName="OptionName">
+            <option *ngFor="let opt of OptionsData" [value]="opt.optionValue">{{opt.optionTypeName}}
+
+            </option>
+        </select>
+
+
+        <div class="col-5" formControlName="optionValue">
+            <label>Value:</label>
+            <input class="form-control" type="text" aria-label="default input example"
+                placeholder=" {{selectedOptionName}}" id="value">
+
+        </div>
+    </div>
+
+</form> -->
