--- a/src/app/product-sku-detail/product-sku-detail.component.html
+++ b/src/app/product-sku-detail/product-sku-detail.component.html
@@ -7,21 +7,41 @@
 
 
 
-<div >
-    <img [src]="imageBaseUrl" alt="no" width="100px" height="70px" class="Skuimgs"> 
-  </div> 
+
+<div>
+    <button type="button" id="editbtn" class="btn btn-secondary" (click)="edit()">Edit</button>
+    <button type="button"  id="addoptbtn" class="btn btn-primary" (click)="AddOptions()">AddOptions</button>
+</div>
 
 <form class="row  g-3" class="box" [formGroup]="Updateform">
 
+    <div class="img1">
+        <div *ngFor="let img of image" class="images">
+            <i class="bi bi-file-excel"></i>
+            <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-file-excel"
+                viewBox="0 0 16 16" (click)="deleteimage(img.productSkuImageId)" class="crossmark">
+                <path
+                    d="M5.18 4.616a.5.5 0 0 1 .704.064L8 7.219l2.116-2.54a.5.5 0 1 1 .768.641L8.651 8l2.233 2.68a.5.5 0 0 1-.768.64L8 8.781l-2.116 2.54a.5.5 0 0 1-.768-.641L7.349 8 5.116 5.32a.5.5 0 0 1 .064-.704z" />
+                <path
+                    d="M4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H4zm0 1h8a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1z" />
+            </svg>
+            <img src={{imageBaseUrl}}{{img.productSkuImage}} alt="no" width="100px" height="70px" class="Skuimgs"
+                [ngClass]="{'primary-image': isPrimary}">
+            <!-- <button (click)="setPrimary()">Set as primary</button> -->
+        </div>
+    </div>
+
+
+
+
+
+
     <div class="row">
-
-
         <div class="col-2">
             <label class="form-label">productSkuid:</label>
             <input type="text" class="form-control" id="productSkuId" name="productSkuId"
                 [(ngModel)]="productSku.productSkuId" formControlName="productSkuId" placeholder="{{id}}"
                 [attr.disabled]="isDisabled ? true : null">
-
         </div>
 
         <div class="col-2">
@@ -30,24 +50,22 @@
                 placeholder="{{productSku.price}}">
 
         </div>
-    </div>
-
-    <div class="row">
         <div class="col-2">
             <label class="form-label">SkuCode:</label>
             <input type="text" class="form-control" id="productSkuCd" name="productSkuCd"
                 [(ngModel)]="productSku.productSkuCd" formControlName="productSkuCd">
 
         </div>
+    </div>
+
+    <div class="row">
+       
 
         <div class="col-2">
             <label class="form-label">Quantity:</label>
             <input type="text" class="form-control" id="count" formControlName="count" [(ngModel)]="productSku.count">
 
         </div>
-    </div>
-
-    <div class="row">
         <div class="col-2">
             <label class="form-label">Discount in %:</label>
 
@@ -63,16 +81,17 @@
 
         </div>
     </div>
+
+    
     <div class="row">
 
-        <div class="form-group" class="col-4" class="textarea">
+        <div class="form-group" class="col-2" class="textarea">
             <label class="form-label">Description:</label>
             <textarea class="form-control" rows="" id="skuDescription" name="skuDescription"
                 [(ngModel)]="productSku.skuDescription" formControlName="Description"></textarea>
         </div>
-    </div>
 
-    <div class="row">
+
         <div class="col-2">
             <label class="form-label">ProductId:</label>
             <input type="text" class="form-control" id="productId" name="productId" [(ngModel)]="productSku.productId"
@@ -85,15 +104,38 @@
             <p class="select">Select Status:</p>
             <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" checked=''
                 [(ngModel)]="productSku.status" formControlName="status">
-            <span>{{productSku.status ? 'Available':'Not-Available'}}</span>
+            <span>{{productSku.status ?
+                'Available':'Not-Available'}}</span>
         </div>
     </div>
 
+    <div class="row">
+        <div class="col-2">
+            <p class="para">Upload Image:</p>
+            <input type="file" (change)="onFileSelected($event)" id="imag_upload" style="display: '';visibility:'';"
+                class="choosefile">
+        </div>
+        <div class="col-2">
+            <label class="labelforoptions">Option Name:</label>
+            <p></p>
+          </div>
+          <div class="col-2" id="labelforoptionsvalues" >
+            <label>Option Value:</label>
+            <p></p>
+
+          </div>
+ </div>
+
+  
+
+    <div class="col-3" class="button">
+        <button type="submit" class="btn btn-success"
+            (click)=" onSubmit()">Save</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <button type="submit" class="btn btn-danger" (click)="cancel()">Cancel</button>
+
+    </div>
+
+
 </form>
 
-<div class="col-3" class="button">
-    <button type="submit" class="btn btn-primary"
-        (click)=" onSubmit()">Save</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <button type="submit" class="btn btn-danger" (click)="cancel()">Cancel</button>
 
-</div>
