--- a/src/app/product-sku-detail/product-sku-detail.component.scss
+++ b/src/app/product-sku-detail/product-sku-detail.component.scss
@@ -1,43 +1,86 @@
-.box{
-    margin-top: 0px;
-    margin-left: 300px;
+// .box{
+   
+//     margin-top: -70px;
+// }
+
+  .row{
+    margin-left: 200px;
+
 }
   .col-2{
-    padding: 5px;
+    padding: 0px;
+    margin-left: 70px;
   }
-  // .textarea{
-  //   width:250px;
-  //   height: 10px;
-  //   margin-top: 20px;
-  // }
+  
   .textarea{
-    width: 300px;
+    width: 280px;
+    margin-left: 50px;
   }
   .button{
-    margin-left: 350px;
-    margin-top: 30px;
+    margin-left: 600px;
+    margin-top: 20px;
+    width: 500px;
   
   }
   .invalid{
     color: red;
   }
   #toggle{
-   margin-left:250px;
+   margin-left:760px;
    margin-top: -50px;
   }
   .select{
     font-size: medium;
-    margin-left: -20px;
+    margin-left: -50px;
     margin-top: 0px;
   }
   input[disabled] {
- 
-    cursor: not-allowed;
+  cursor: not-allowed;
   }
   .Skuimgs{
-    margin-left: 300px;
-    margin-top: 10px;
+      margin-left: 260px;
+    margin-top: 30px;
+   }
+   
+   .images{
+    display:inline-flex;
+    margin-left: -250px;
+    
+   }
+   .img1{
+    margin-left: 270px;
+   }
+  .crossmark{
+    margin-left: 350px;
+    margin-top: 28px;
+    color: aqua;
+    position: absolute;
   }
+  #editbtn{
+  margin-left: 900px;
+  width: 100px;
+  margin-top: 50px;
+  position: absolute;
+}
+#addoptbtn{
+  margin-left: 1050px;
+  width: 100px;
+  margin-top: 50px;
+  position: absolute;
+}
+  .labelforoptions{
+    font-size: 18px;
+  }
+  #labelforoptionsvalues{
+    font-size: 18px;
+  }
+  .para{
+    font-size: 18px;
+  }
+ 
+
+
+  
   
   @media only screen and (max-width: 800px) {
    
