--- a/src/app/modules/admin/components/product-dialog/product-dialog.component.html
+++ b/src/app/modules/admin/components/product-dialog/product-dialog.component.html
@@ -46,7 +46,7 @@
     <div mat-dialog-action [align]="'center'">
       <button mat-raised-button color="warn" mat-dialog-close>Cancel</button>
       <button style="margin-left:10px" mat-raised-button color="primary"
-        (click)="addProduct(productForm)">Submit</button>
+        (click)="addProduct(productForm)" mat-dialog-close>Submit</button>
     </div>
   </form>
 </div>
