--- a/src/app/modules/admin/components/add-options/add-options.component.scss
+++ b/src/app/modules/admin/components/add-options/add-options.component.scss
@@ -1,35 +1,6 @@
-.form1{
-    margin-left:400px;
-   margin-top: 60px;
-  border-style: ridge;
-  height: 200px;
-  width: 700px;
+.container{
+    width: 500px;
+    height: 500px;
 }
-.form2{
-    margin-left: 400px;
-     margin-top: 50px;
-    border-style: ridge;
-    height: 300px;
-    width: 800px;
-}
-.p1{
-    padding: 10px;
-     margin-top: 10px;
-    margin-left:50px;
-}
-#btn1{
-    margin-top: 20px;
-    margin-left:200px ;
-    
-}
-#btn2{
-    margin-left: 250px;
-}
-.btn3{
-    margin-left: 300px;
-    margin-top:80px ;
-   
-}
-// .row{
-//     margin-top: 30px;
-// }
+
+
