--- a/src/app/modules/admin/components/products/products.component.html
+++ b/src/app/modules/admin/components/products/products.component.html
@@ -24,9 +24,10 @@
     </td>
   </ng-container>
     <ng-container matColumnDef="position">
-      <th mat-header-cell *matHeaderCellDef><b>S No</b></th>
-      <td mat-cell *matCellDef="let i=index;"> {{i+1}} </td>
+      <th mat-header-cell *matHeaderCellDef><b>ProductId</b></th>
+      <td mat-cell *matCellDef="let element"> {{element.productId}} </td>
     </ng-container>
+   
   
     
     <ng-container matColumnDef="productName">
