--- a/src/app/select-gst/select-gst.component.html
+++ b/src/app/select-gst/select-gst.component.html
@@ -33,7 +33,7 @@
   </div>
   <div id="gstsavebtn">
     <button type="submit" class="btn btn-success">Save</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <button type="submit" class="btn btn-danger"(click)="cancel()">Cancel</button>
+    <button type="submit" class="btn btn-danger">Cancel</button>
 
   </div>
 
